--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "gsap": "^3.12.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.0.0",
     "next": "^14.0.0",
+    "nodemailer": "^7.0.11",
     "razorpay": "^2.9.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
